# zipall

./: .gitignore  Cargo.toml
lib/core/: Cargo.toml
lib/core/src/: error.rs  lib.rs  scan.rs  spec.rs  util.rs  zip.rs
lib/log/: Cargo.toml
lib/log/src/: lib.rs
lib/paths/: Cargo.toml
lib/paths/src/: lib.rs
zipall/: Cargo.toml
zipall/src/: main.rs
