[package]
name = "zipall"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
indicatif = "0.17.8"
log = "0.4.22"
zipall-log = { path = "../lib/log" }
zipall-core = { path = "../lib/core" }
tokio = { version = "1.40.0", features = ["full"] }
humansize = "2.1.3"
rand = "0.8.5"
